# kilm

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-train.txt
.github/workflows/: ci.yml
configs/: llama_100m.json
data/: corpora.json  model_configs.json  tokenizer_eval_examples.tsv
data/eval/: README.md
data/sft/: README.md
docs/: DATA_CARD.md  FINAL_RUN_REPORT.md  MODEL_CARD.md  SFT_RUN_REPORT.md  run-notes.md
scripts/: aggregate_corpus.py  analyze_tokenizers.py  check_training_status.py  compare_runs.py  create_review_packet.py  evaluate_tokenizer_examples.py  fetch_approved_corpus.py  generate_kilm.py  generate_sft_bootstrap.py  merge_lora_adapter.py  prepare_corpus.py  prepare_sft_conversations.py  run_conversation_benchmark.py  run_inference_batch.sh  run_post_sft_eval.sh  run_track_a_sandbox.py  sample_checkpoint.py  tokenize_corpus.py  train_kilm.py  train_sentencepiece.py  train_sft_qlora.py  write_final_report.py
src/kilm/: __init__.py  analysis.py  bpe_tokenizer.py  char_tokenizer.py  checkpointing.py  configs.py  corpus.py  preprocessing.py  reporting.py  tiny_transformer.py  tokenizers.py  training.py
tests/: test_track_a_sandbox.py
tokenizer/: kinyarwanda_spm.model  kinyarwanda_spm.vocab  tokenizer.json  tokenizer_config.json  tokenizer_report.json
