[project]
name = "kilm"
version = "0.1.0"
description = "Standalone toy language-model sandbox for the Kinyarwanda LM project"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "pytest>=8.0.0",
  "torch>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kilm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
